Fix overflow property in style.css

--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body {
     rgba(255, 255, 255, 0.721),
     rgba(255, 255, 255, 0.708)
   );
+  overflow:none;
   /* background:rgba(53, 62, 128, 0.564); */
 }
 .card,.info {
